[package]
name = "unquote"
version = "0.0.1"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "Reverse quote macros... that is: Macros to parse input from a ParseStream according to a given pattern."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/unquote"
homepage = "https://github.com/Tamschi/unquote/tree/v0.0.1"
documentation = "https://docs.rs/unquote/0.0.1"
keywords = ["syn"]
categories = ["development-tools::procedural-macro-helpers"]
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"LICENSE-*",
	"README.md",
]
publish = false

[badges]
travis-ci = { repository = "Tamschi/unquote", branch = "develop" }
is-it-maintained-issue-resolution = { repository = "Tamschi/unquote" }
is-it-maintained-open-issues = { repository = "Tamschi/unquote" }
maintenance = { status = "experimental" }

[lib]
proc-macro = true

# TODO: Re-export libraries!
[dependencies]
call2-for-syn = "1.0.0"
proc-macro2 = "1.0.24"
quote = "1.0.7"
syn = { version = "1.0.48", features = ["parsing"], default-features = false }


[dev-dependencies]
cargo-husky = "1.5.0"
doc-comment = "0.3.3"
git_info = "0.1.2"
version-sync = "0.9.1"
